--- a/FrontEnd/IT-Support/src/app/dashboard/sidebar/sidebar.component.html
+++ b/FrontEnd/IT-Support/src/app/dashboard/sidebar/sidebar.component.html
@@ -3,7 +3,7 @@
     <a mat-list-item routerLink="/dashboard/user">Manage Users</a>
     <a mat-list-item routerLink="/dashboard/technician">Manage Technician</a>
     <a mat-list-item routerLink="/dashboard/equipment">Manage Equipment</a>
-    <a mat-list-item routerLink="/dashboard/link">Link Fault</a>
+    <a mat-list-item routerLink="/dashboard/fault">Manage Fault</a>
     <a mat-list-item routerLink="/dashboard/logout">Log out</a>
   </div>
   <div *ngIf="userRole === 'user'">
