--- a/FrontEnd/IT-Support/src/app/dashboard/sidebar/sidebar.component.html
+++ b/FrontEnd/IT-Support/src/app/dashboard/sidebar/sidebar.component.html
@@ -1,17 +1,17 @@
 <mat-nav-list>
-  <div *ngIf="userRole === 'admin'">
+  <div *ngIf="userRole === 'ADMIN'">
     <a mat-list-item routerLink="/dashboard/user">Manage Users</a>
     <a mat-list-item routerLink="/dashboard/technician">Manage Technician</a>
     <a mat-list-item routerLink="/dashboard/equipment">Manage Equipment</a>
     <a mat-list-item routerLink="/dashboard/fault">Manage Fault</a>
-    <a mat-list-item routerLink="/dashboard/logout">Log out</a>
+    <a mat-list-item routerLink="/logout">Log out</a>
   </div>
-  <div *ngIf="userRole === 'user'">
-    <a mat-list-item routerLink="/dashboard/usertickets">My Ticket</a>
-    <a mat-list-item routerLink="/dashboard/logout">Log out</a>
+  <div *ngIf="userRole === 'USER'">
+    <a mat-list-item routerLink="/dashboard/ticket/user">My Tickets</a>
+    <a mat-list-item routerLink="/logout">Log out</a>
   </div>
-  <div *ngIf="userRole === 'technician'">
+  <div *ngIf="userRole === 'TECHNICIAN'">
     <a mat-list-item routerLink="/dashboard/tickets">All Tasks</a>
-    <a mat-list-item routerLink="/dashboard/logout">Log out</a>
+    <a mat-list-item routerLink="/logout">Log out</a>
   </div>
 </mat-nav-list>
