--- a/FrontEnd/IT-Support/src/app/login/login.component.html
+++ b/FrontEnd/IT-Support/src/app/login/login.component.html
@@ -24,7 +24,7 @@
 
         <button mat-raised-button color="primary" type="submit" [disabled]="!loginForm.valid">Login</button>
       </form>
-      <mat-error *ngIf="loginError">{{ loginError }}</mat-error> <!-- Display error message here -->
+      <mat-error *ngIf="loginError">{{ loginError }}</mat-error>
     </mat-card-content>
   </mat-card>
 </div>
