--- a/FrontEnd/IT-Support/src/app/dashboard/dashboard.component.html
+++ b/FrontEnd/IT-Support/src/app/dashboard/dashboard.component.html
@@ -5,7 +5,7 @@
   <span class="app-title">IT Support Application</span>
   <span class="header-spacer"></span>
   <button mat-icon-button class="example-icon favorite-icon" aria-label="Example icon-button with heart icon">
-    <mat-icon>favorite</mat-icon>
+    <mat-icon>dashboard</mat-icon>
   </button>
   <button mat-icon-button class="example-icon" aria-label="Example icon-button with share icon">
     <mat-icon>share</mat-icon>
