--- a/FrontEnd/IT-Support/src/app/dashboard/user/user.component.html
+++ b/FrontEnd/IT-Support/src/app/dashboard/user/user.component.html
@@ -35,11 +35,6 @@
         </td>
       </ng-container>
 
-      <!-- <ng-container matColumnDef="id">
-        <th mat-header-cell *matHeaderCellDef>Id</th>
-        <td mat-cell *matCellDef="let element">{{element.id}}</td>
-      </ng-container> -->
-
       <ng-container matColumnDef="username">
         <th mat-header-cell *matHeaderCellDef>UserName</th>
         <td mat-cell *matCellDef="let element">{{element.username}}</td>
@@ -56,9 +51,9 @@
         <th mat-header-cell *matHeaderCellDef>Action</th>
         <td mat-cell *matCellDef="let element">
           <div class="font-icone-style">
-            <a [routerLink]="['view', element.id]"><mat-icon aria-hidden="false">visibility</mat-icon></a> |
-            <a [routerLink]="['edit', element.id]"><mat-icon aria-hidden="false">edit</mat-icon></a> |
-            <a [routerLink]="['delete', element.id]"><mat-icon aria-hidden="false">delete</mat-icon></a>
+            <a [routerLink]="['view', element.id]"><mat-icon aria-hidden="false" style="color:lightgrey ;">visibility</mat-icon></a> |
+            <a [routerLink]="['edit', element.id]"><mat-icon aria-hidden="false" style="color: lightblue;">edit</mat-icon></a> |
+            <a [routerLink]="['delete', element.id]"><mat-icon aria-hidden="false" style="color: lightcoral;">delete</mat-icon></a>
           </div>
         </td>
       </ng-container>
